crates/pato/tests/fixtures/valid/fmt_after_comments.gram
// lead

@@meta::doc @source(primary) [team::Group {a: 1, z: 2} | (alice::Person)]

// tail
