crates/pato/tests/fixtures/invalid/P003.gram
@source(primary) @source(backup) (alice:Person)
